february_xxiii playground index

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Playground is now available!</strong> Playground for The Great Excavation event is now available on the All Events subpage (February 20th 2023)</li>
                 <li><strong>The Great Excavation event arrived!</strong> All buildings from this event are now in the database (February 2nd 2023)</li>
                 <li><strong>Season of Dreams is here!</strong> The newest Seasons are now fully supported by my website and you can find content for the upcoming Season of Dreams under the More button (January 23rd 2023)</li>
                 <li><strong>The Secrets of Alchemy event arrived!</strong> All buildings from this event are now in the database (January 3rd 2023)</li>
