season of joy prep

--- a/admin.html
+++ b/admin.html
@@ -188,6 +188,7 @@ Odmena1<br></h7>
 
 
     seasonPass: <input class="form-control-file" type="file" id="seasonPass" name="filename">
+    season ID (season_dreams): <input type="text" id="season_id"><br>
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonPass()">GENERATE</button>
 
 </div>
