fa use globalStartDates

--- a/fellowship-adventures.html
+++ b/fellowship-adventures.html
@@ -47,6 +47,7 @@
     <script src="database/notifications.js"></script>
     <script src="database/flexibleRewards.js"></script>
     <script src="database/eventsSelectors.js"></script>
+    <script src="database/globalStartDates.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
