february_xxiii images documentation

--- a/eventTabs/february_xxiii_/playground.html
+++ b/eventTabs/february_xxiii_/playground.html
@@ -1,10 +1,34 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
-* 
-*
-*
-*
-* 
-* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<!-- 1. currency:
+	* event_currency.png - HQ PNG taken from CM_assets
+	* event_payback.png - HQ PNG taken from CM_assets
+	* chest.png - used for displaying the count of collected generic rewards - OF, margins trimmed
+	* chest_silver.png - OF
+2. genericRewards - chest0.png - chest11.png - OF
+3. tiles:
+	* tile_payback.png - OF
+	* tileBlocker1.png - tileBlocker6.png - OF
+	* tileboardBackground.png - OF
+	* tileClearableNew.png - cropped from atlas-common...
+	* tileOverlayFoggedOLD.png - OF
+	* ui_tile_highlight.png, ui_tile_position.png - taken from CM_assets
+4. tools:
+	* arrow.png/arrow.svg - downloaded
+	* cell_tool_(adjacent/column/single)_on_tileboard.png - used for displaying the tools excavated on the tileboard - HQ PNG taken from CM_assets, changed the margin to a specific ratio
+	* tool_(adjacent/column/single) - used for displaying the tools on the side panel - HQ PNG taken from CM_assets, changed the margin to a specific ratio
+	* tool_(adjacent/column/single)_bw.png - used for displaying the unavailable tools on the side panel - HQ PNG taken from CM_assets, change the colours to black and white, changed the margin to the same ratio as above
+	* tool_(adjacent/column/single)_hover.png - used for displaying the available tools when hovered over them - HQ PNG taken from CM_assets, changed the margin to the same ratio as above
+	* tool_(adjacent/column/single)_cursor.png - HQ PNG taken from CM_assets, trimmed the sides leaving enough space for the cursor, added the cursor icon (arrow.png) to the upper left corner, downscaled (neither dimension must exceed 64px)
+5. window:
+	* button... - all from atlas-common.buttons...
+	* panel.png - used for the side panel - created by myself based on ui_panel_amuni_9s.png
+	* panel_shop_tool_bottom.png - used for the under row of offer (single offers) in the tool shop for the images - extracted from windowBackground.png
+	* panel_shop_tool_top.png - used for the upper row of offer (set offers) in the tool shop for the images - extracted from windowBackground.png
+	* panel_shop_bottom.png - used for the under row of offer (single offers) in the tool shop as a frame for the whole offer - extracted from windowBackground.png
+	* panel_shop_top.png - used for the upper row of offer (set offers) in the tool shop as a frame for the whole offer - extracted from windowBackground.png
+	* ui_panel_amuni_tools_inset.png - used for the side panel as a background for the tool images - HQ PNG taken from CM_assets
+	* ui_panel_tiled_borders.png - used for the border of the tileboard - HQ PNG taken from CM_assets
+	* ui_pattern_amuni_hieroglyphs.png - used as a background of the playground - HQ PNG taken from CM_assets
+-->
 
 <style>
   #minigameContainer {
