--- a/eventTabs/may_xxiii_/offers.html
+++ b/eventTabs/may_xxiii_/offers.html
@@ -22,19 +22,19 @@
  
  <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
  
-         The Dwarven Event features 12 different offers in total. You can see the list of all of these offers below. This list especially
-         focuses on their rewards, as the event mechanic makes their costs pretty much random (for one offer a dwarf can ask different
-         pieces and different levels of these pieces).<br><br>
+         The Kitchen Event features 12 different offers in total. You can see the list of all of these offers below. This list especially
+         focuses on their rewards, as the event mechanic makes their costs pretty much random (for one offer a customer can ask different
+         dishes with different levels).<br><br>
  
          <center><img src="https://i.ibb.co/ctLccCD/EL-akcia-august-2022-decline-offer.png" style="margin-bottom: -30px; margin-top: -5px;"></center><br><br>
  
          You can always decline any offer you wish. Before you get into the merging process, hover over your current offer so that you can see what 
          the rewards are and whether they are worth your effort or not! <br>Keep in mind that every offer has the so-called range of possible costs (this is 
          what I observed from my gameplay on Beta). It means that when we take a list of required pieces for one specific offer out of those listed below and realize how many level 1 pieces we need 
-         (with the help of the <b>Pieces</b> tab), we do not get the same number every time! <br><br>The <b>costs</b> represent the number of required level 1 pieces (which would be needed in the worst case scenario),
+         (with the help of the <b>Dishes</b> tab), we do not get the same number every time! <br><br>The <b>costs</b> represent the number of required level 1 pieces (which would be needed in the worst case scenario),
          so you can decide for yourself, whether your current order is in the lower part
-         of this range, or you want to decline your offer and finish other tasks in the meantime. Even though the difference is not huge, it may help you 
-         reach more Grand Prizes after all (and potentially some more parts of the Dwarven Citadel Set, if that's what you aim for).<br><br>
+         of this range, or you want to decline your offer and finish other offers in the meantime. Even though the difference is not huge, it may help you 
+         reach more Grand Prizes after all (and potentially some more artifacts for the Juul's Traveling Kitchen evolving building, if that's what you aim for).<br><br>
          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
                              crossorigin="anonymous"></script> <!-- In-article -->
                          <ins class="adsbygoogle"
