--- a/eventTabs/may_xxiii_/stockpiles.html
+++ b/eventTabs/may_xxiii_/stockpiles.html
@@ -7,8 +7,8 @@
 
    <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
       
-      There are 3 cups in total, each generating its own type of pieces. The Yellow Cup generates the Dwarven Figurines, 
-      the Red Cup generates the Dwarven Tools and the Green Cup generates Dices.
+      There are 3 stockpiles in total, each generating its own type of dishes. The __ generates the Hot Chocolate, 
+      the __ generates the Lime Dessert and the __ generates Delicious Roast.
 
       <div class="bbTable">
           <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
@@ -53,13 +53,13 @@
           </table>
         </div>
 
-      We know that each cup can generate even better piece than level 1 (with a decreasing chance). In case the spawning process generates a better piece than the one 
-      needed in our task, it may seem like we have received a potentially useless piece for now (which could lead us to think that the worst-case scenario numbers
-      calculated in the <b>Pieces</b> tab may get even worse), but we will certainly find a use for this piece in one of the very following tasks and that will reduce
-      our costs markedly. So do not discard your high level pieces! Unless you are clicking the cups buttons too many times (and more than the number of level 1
-      pieces you need), you shouldn't get into excess of your pieces in the board!<br><br>
+      We know that each stockpile can generate even better dish than level 1 (with a decreasing chance). In case the spawning process generates a better dish than the one 
+      needed in our task, it may seem like we have received a potentially useless dish for now (which could lead us to think that the worst-case scenario numbers
+      calculated in the <b>Dishes</b> tab may get even worse), but we will certainly find a use for this piece in one of the very following offers and that will reduce
+      our costs markedly. So do not discard your high level dishes! Unless you are clicking the stockpile buttons too many times (and more than the number of level 1
+      dishes you need), you shouldn't get into excess of your dishes in the kitchen!<br><br>
 
-      Considering the merging process from the <b>Pieces</b> tab and spawning process from the table above, we can visualize the whole gameplay mechanic.
+      Considering the merging process from the <b>Dishes</b> tab and spawning process from the table above, we can visualize the whole gameplay mechanic.
       Use the <b>Play</b> button to start the visualization and click the respective <b>Merge</b> nodes to merge your generated pieces (if you already have some, of course).
   
       <div class="row" style="height: 700px; margin-top: 20px; margin-bottom: 15px;">
