--- a/eventTabs/may_xxiii_/kitchen.html
+++ b/eventTabs/may_xxiii_/kitchen.html
@@ -7,14 +7,14 @@
 
      <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
 
-        The Dwarven Event brings a new mechanic that is completely new to Elvenar! The core of this mechanic lies in completing the dwarves' demands.
-        These are known as trade offers and you can see the offers in the right part of the event window. There are 12 trade offers
-        in total of which 3 can be visible at the same time (that's a similar principle to our previous events with rotating chests).<br><br>
+        The Kitchen Event brings a new mechanic that is completely new to Elvenar! The core of this mechanic lies in completing the customers' demands.
+        These are known as customers' offers and you can see the offers in the right part of the event window. There are 12 offers
+        in total of which 3 can be visible at the same time (that's the similar principle to our previous events with rotating chests).<br><br>
 
         <center><img src="https://i.ibb.co/Jqdbw0f/EL-akcia-august-2022-okno-akcie.png" style="width: 60%;"></center><br>
 
-        Your task begins with the event questline, where you can earn Dwarven Chips <img src="https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png" style="height: 15px; margin-bottom: 3px;">.
-        You need Dwarven Chips to spawn Pieces on your board, combine them and fulfill various trade offers that the Dwarven Event gives you.<br><br>
+        Your task begins with the event questline, where you can earn Chef Hats <img src="https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png" style="height: 15px; margin-bottom: 3px;">.
+        You need Chef Hats to spawn Dishes on your board, combine them and fulfill various customers' offers that the Kitchen Event generates for you.<br><br>
 
         <center>
             <img src="https://i.ibb.co/9ccjXQg/EL-akcia-august-2022-cup-yellow.png">
@@ -22,60 +22,60 @@
             <img src="https://i.ibb.co/GPD05c9/EL-akcia-august-2022-cup-green.png">
         </center><br>
 
-        To spawn Pieces on your board, click one of the Cups placed in the bottom of your event screen. Each Cup generates a different
-        set of Pieces, so make sure that you hover over a respective cup before you perform the spawning process to see where you can get the required
+        To spawn Dishes on your board, click one of the Stockpiles placed at the bottom of your event screen. Each Stockpile generates a different
+        set of Dishes, so make sure to hover over a respective stockpile before you perform the spawning process and see where you can get the required
         items.<br><br>
 
         <center><img src="https://i.ibb.co/znCWhn7/EL-akcia-august-2022-offer-required-pieces.png"></center><br>
 
-        To find your required pieces, let's take a closer look at different trade offers in the right part of the event window.
+        To find your required dishes, let's take a closer look at different customers' offers in the right part of the event window.
 
         <div class="row" style="margin-top: 40px; margin-bottom: 40px;">
             <div class="col-sm-4">
                 <center><img src="https://i.ibb.co/zGqZM7B/EL-akcia-august-2022-offers.png"></center>
             </div>
             <div class="col-sm-8">
-                Three trade offers can be seen at the same time. You can always <b>Decline</b> any offer you wish (by clicking the Trashcan button),
+                Three customers' offers can be seen at the same time. You can always <b>Decline</b> any offer you wish (by clicking the Trashcan button),
                 or you can decide to complete it and earn rewards. By hovering over any of the three offers you can see what is the set
                 of possible prizes for you.<br><br>
-                While you are realizing whether your current offer is beneficial for you or not, you may also consider the cost of required Pieces.
-                Take a look at <b>Trades</b> and <b>Pieces</b> tab to see all the available trade offers in this event and how to realize the cost of respective
+                While you are considering whether your current offer is beneficial for you or not, you may also consider the cost of the required Dishes.
+                Take a look at <b>Offers</b> and <b>Dishes</b> tab to see all the available customers' offers in this event and how to calculate the cost of respective
                 offers.<br><br>
-                A new trade offer appears immediately after you complete one, but when you use the Decline button, you need to wait 30 minutes
+                A new customer's offer appears immediately after you complete one, but when you use the Decline button, you need to wait 30 minutes
                 for a new one to appear. One of the event strategies lies in realizing how to maximize the number of completed offers during the day
-                of your favorite daily prize, while only completing the most beneficial offers, so that you maximize the chance for receiving
-                that daily prize.
+                when your favorite daily prize is active, while only completing the most beneficial offers, so that you maximize the chance for receiving
+                the daily prize.
             </div>
         </div>
 
-        Not everytime the spawning process alone will be sufficient for completing your offers. Take a look at the <b>Pieces</b> tab to see that every
-        type of game piece contains 6 different levels, differing in their value and look. It is more likely that the Cup will generate the low-level 
-        piece and in order to obtain the high-level piece, you need to combine 2 identical pieces. This is where merging part of this event begins
-        and it's all situated in your event board:<br><br>
+        Not everytime the spawning process alone will be sufficient for completing your offers. Take a look at the <b>Dishes</b> tab to see that every
+        type of game dish contains 6 different levels, differing in their value and look. It is more likely that the Stockpile will generate the low-level 
+        dish and in order to obtain the high-level dish, you need to combine 2 identical dish in the kitchen. This is where the merging part of this event comes into play
+        and it's all situated in your event kitchen:<br><br>
 
         <center><img src="https://i.ibb.co/FxLhz1G/EL-akcia-august-2022-board-items.png" style="width: 35%;"></center><br>
 
-        Take a look at the <b>Pieces</b> and <b>Trades</b> tabs to see more closely how the merging process works.<br><br>
+        Take a look at the <b>Dishes</b> and <b>Offers</b> tabs to see more closely how the merging process works.<br><br>
         
         One of my favorite aspects of this event is managing the space. The board has size of 9x5, which means that only a limited number
-        of pieces can be spawned (merged) at the same time. These pieces consist of various types and levels and so it is very easy to create
+        of dishes can be spawned (merged) at the same time. These dishes consist of various types and levels and so it is very easy to create
         a chaos on your board. The constant need to tidy up your space and to actually bring some order out of this chaos is in my opinion one of
         the best aspects of this event.<br><br>
 
         <center><img src="https://i.ibb.co/Q8YRJ1b/EL-akcia-august-2022-board.png" style="max-width: 100%;"></center><br>
 
         <ul>
-          <li><b>Group your pieces!</b> When you run into a new task and perform the spawning process too many times, a lot of new pieces 
-              start occupying your space. It is a good rule to try to group your pieces on the board and split them up into different sectors.
-              You can use the left corner for Dwarven Figurines for example, the middle room for Dwarven Tools and the right corner for Dices.
-              Even within these sectors the pieces can be sorted (e.g. by their levels) and that will ease your merging process, especially if you
-              are not familiar with the look of different pieces and levels at the beginning of the game.</li>
-          <li><b>Do not spawn too many pieces!</b> You can guess the approximate number of times you have to click the Cups buttons in order to
-              merge the required pieces (take a look at the <b>Pieces</b> tab). This will prevent you from having many unused pieces on your board and 
-              prevent the need of using the Discard feature, which would cause loosing your dwarven chips.</li>
-          <li><b>Discard feature!</b> This feature may be helpful for you if your board gets too messed up with other types of pieces than
-              those you need for your current task, but keeping the points above and all the hints from my other tabs in your mind, generally speaking you shouldn't 
-              get there, as the overall size of the board is large enough. I have completed many tasks already and didn't need to use the Discard feature once.</li>
+          <li><b>Group your dishes!</b> When you run into a new offer and perform the spawning process too many times, a lot of new dishes 
+              start occupying your space. It is a good rule to try to group your pieces on the board and split them up into different sections of the kitchen.
+              You can use the left corner for Hot Chocolates for example, the middle room for Lime Desserts and the right corner for Delicious Roasts.
+              Even inside the sectors the dishes can be sorted (e.g. by their levels) and that will ease your merging process, especially if you
+              are not familiar with the look of different dishes and levels at the beginning of the game.</li>
+          <li><b>Do not spawn too many dishes!</b> You can guess how many times you need to click the Stockpile button in order to
+              merge the required dishes (take a look at the <b>Dishes</b> tab). This will prevent you from having many unused dishes on your board and 
+              prevent the need of using the Discard feature, which would make you lose your Chef Hats.</li>
+          <li><b>Discard feature!</b> This feature may be helpful for you if your board gets too messed up with other types of dishes than
+              those you need for your current task, but if you keep the points above and all the hints from my other tabs in your mind, generally speaking you shouldn't 
+              get into this situation, as the overall size of the board is sufficient for your needs. I have completed many customers' offers already and I didn't have to use the Discard feature.</li>
         </ul>
     </div>
     
