gr research + may_xxiii prep

--- a/admin.html
+++ b/admin.html
@@ -193,6 +193,16 @@ Odmena1<br></h7>
 
 </div>
 
+<div class="container" style="margin-bottom: 20px;">
+    <p>Research:</p>
+
+
+    researchTechnologies: <input class="form-control-file" type="file" id="research" name="filename">
+    section (1-20): <input type="text" id="research_section"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateResearch()">GENERATE</button>
+
+</div>
+
 
 </body>
 </html>
