--- a/eventTabs/may_xxiii_/kitchen.html
+++ b/eventTabs/may_xxiii_/kitchen.html
@@ -3,7 +3,7 @@
 <div id="main">
 
      <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Kitchen ::..<br></h5>
-     <img id="event_banner" src="https://i.ibb.co/k2CQtPK/EL-akcia-august-2022-board-small.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+     <img id="event_banner" src="https://i.ibb.co/YXvTT8R/kitchen-image.png" alt="undefined" class="center " style="margin-bottom: 15px;">
 
      <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
 
@@ -35,9 +35,9 @@
                 <center><img src="https://i.ibb.co/zGqZM7B/EL-akcia-august-2022-offers.png"></center>
             </div>
             <div class="col-sm-8">
-                Three customers' offers can be seen at the same time. You can always <b>Decline</b> any offer you wish (by clicking the Trashcan button),
+                Three customers' offers can be seen at the same time. You can always <b>Decline</b> any offer you wish (by clicking the Trashcan button)
                 or you can decide to complete it and earn rewards. By hovering over any of the three offers you can see what is the set
-                of possible prizes for you.<br><br>
+                of possible prizes you can receive.<br><br>
                 While you are considering whether your current offer is beneficial for you or not, you may also consider the cost of the required Dishes.
                 Take a look at <b>Offers</b> and <b>Dishes</b> tab to see all the available customers' offers in this event and how to calculate the cost of respective
                 offers.<br><br>
@@ -50,32 +50,32 @@
 
         Not everytime the spawning process alone will be sufficient for completing your offers. Take a look at the <b>Dishes</b> tab to see that every
         type of game dish contains 6 different levels, differing in their value and look. It is more likely that the Stockpile will generate the low-level 
-        dish and in order to obtain the high-level dish, you need to combine 2 identical dish in the kitchen. This is where the merging part of this event comes into play
-        and it's all situated in your event kitchen:<br><br>
+        dish and in order to obtain the high-level one, you need to combine 2 identical dishes in the kitchen. This is where the merging part of this event comes into play
+        and all of that situated in your event kitchen:<br><br>
 
         <center><img src="https://i.ibb.co/FxLhz1G/EL-akcia-august-2022-board-items.png" style="width: 35%;"></center><br>
 
         Take a look at the <b>Dishes</b> and <b>Offers</b> tabs to see more closely how the merging process works.<br><br>
         
-        One of my favorite aspects of this event is managing the space. The board has size of 9x5, which means that only a limited number
-        of dishes can be spawned (merged) at the same time. These dishes consist of various types and levels and so it is very easy to create
-        a chaos on your board. The constant need to tidy up your space and to actually bring some order out of this chaos is in my opinion one of
+        One of my favorite aspects of this event is managing the space. The board is of 9x5 size, which means that only a limited number
+        of dishes can be spawned (merged) at the same time. These dishes consist of various types and levels, so it is very easy to create
+        chaos on your board. The constant need to tidy up your space and to actually bring some order out of chaos is in my opinion one of
         the best aspects of this event.<br><br>
 
         <center><img src="https://i.ibb.co/Q8YRJ1b/EL-akcia-august-2022-board.png" style="max-width: 100%;"></center><br>
 
         <ul>
           <li><b>Group your dishes!</b> When you run into a new offer and perform the spawning process too many times, a lot of new dishes 
-              start occupying your space. It is a good rule to try to group your pieces on the board and split them up into different sections of the kitchen.
+              start occupying your space. It is a good rule to try grouping your pieces on the board and splitting them up into different sections of the kitchen.
               You can use the left corner for Hot Chocolates for example, the middle room for Lime Desserts and the right corner for Delicious Roasts.
-              Even inside the sectors the dishes can be sorted (e.g. by their levels) and that will ease your merging process, especially if you
+              Inside the sectors the dishes can be sorted as well (e.g. by their levels). This will ease your merging process, especially if you
               are not familiar with the look of different dishes and levels at the beginning of the game.</li>
           <li><b>Do not spawn too many dishes!</b> You can guess how many times you need to click the Stockpile button in order to
-              merge the required dishes (take a look at the <b>Dishes</b> tab). This will prevent you from having many unused dishes on your board and 
+              merge the dishes you need (take a look at the <b>Dishes</b> tab). This will prevent you from having many unused dishes on your board and 
               prevent the need of using the Discard feature, which would make you lose your Chef Hats.</li>
-          <li><b>Discard feature!</b> This feature may be helpful for you if your board gets too messed up with other types of dishes than
+          <li><b>Discard feature!</b> This feature may be helpful for you if your board gets messed up with other types of dishes than
               those you need for your current task, but if you keep the points above and all the hints from my other tabs in your mind, generally speaking you shouldn't 
-              get into this situation, as the overall size of the board is sufficient for your needs. I have completed many customers' offers already and I didn't have to use the Discard feature.</li>
+              get into this situation, as the overall size of the board is sufficient for your needs. I have completed many customers' offers already and I didn't have to use this feature.</li>
         </ul>
     </div>
     
