--- a/guestRaces/orcs.html
+++ b/guestRaces/orcs.html
@@ -45,6 +45,8 @@
     <script src="javascript/utils.js"></script>
     <script src="javascript/quests_handler.js"></script>
     <script src="database/questsGuestRaces.js"></script>
+    <script src="javascript/research_handler.js"></script>
+    <script src="database/researchGuestRaces.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
