--- a/eventTabs/may_xxiii_/offers.html
+++ b/eventTabs/may_xxiii_/offers.html
@@ -2,11 +2,8 @@
 
 <div id="main">
   
-    <!-- <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Lucky Little Fin ::..<br></h5>
-     <img id="event_banner" src="https://i.ibb.co/F33YbJG/EL-akcia-m-j-2022-banner.png" alt="undefined" class="center " style="margin-bottom: 15px; width: 50%;">
-    -->
      <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Customer Offers ::..<br></h5>
-     <img id="event_banner" src="https://i.ibb.co/Cs4nN01/EL-akcia-august-2022-dwarves.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+     <img id="event_banner" src="https://i.ibb.co/5YvpYK1/offers-image.png" alt="undefined" class="center " style="margin-bottom: 15px;">
    
      <!--<div class="row">
        <div class="col-sm">
@@ -22,11 +19,11 @@
  
  <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
  
-         The Kitchen Event features 12 different offers in total. You can see the list of all of these offers below. This list especially
+         The Kitchen Event features 12 different customers' offers in total. You can see the list of all of the available offers below. This list especially
          focuses on their rewards, as the event mechanic makes their costs pretty much random (for one offer a customer can ask different
          dishes with different levels).<br><br>
  
-         <center><img src="https://i.ibb.co/ctLccCD/EL-akcia-august-2022-decline-offer.png" style="margin-bottom: -30px; margin-top: -5px;"></center><br><br>
+         <center><img src="https://i.ibb.co/RN7ws7J/offer-decline.png" style="margin-bottom: -30px; margin-top: -5px;"></center><br><br>
  
          You can always decline any offer you wish. Before you get into the merging process, hover over your current offer so that you can see what 
          the rewards are and whether they are worth your effort or not! <br>Keep in mind that every offer has the so-called range of possible costs (this is 
