--- a/admin.html
+++ b/admin.html
@@ -194,6 +194,16 @@ Odmena1<br></h7>
 </div>
 
 <div class="container" style="margin-bottom: 20px;">
+    <p>SeasonChests:</p>
+
+
+    weightedRewards: <input class="form-control-file" type="file" id="seasonChests" name="filename">
+    season ID (season_dreams): <input type="text" id="season_chests_id"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonChests()">GENERATE</button>
+
+</div>
+
+<div class="container" style="margin-bottom: 20px;">
     <p>Research:</p>
 
 
