--- a/seasons.html
+++ b/seasons.html
@@ -51,6 +51,7 @@
     <script src="database/seasonsQuests.js"></script>
     <script src="database/seasonPass.js"></script>
     <script src="database/imagesBuildings.js"></script>
+    <script src="database/seasonsChests.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
