seasons blessings index update

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Blessings for Seasons!</strong> Blessings for Seasons are now fully supported by the website. You can find them on the Seasons page (April 9th 2023)</li>
                 <li><strong>Research for Guest Races!</strong> All Guest Races now have their interactive research tree together with the calculator of the remaining costs available (April 7th 2023)</li>
                 <li><strong>Realm of the Phoenix event arrived!</strong> All buildings from this event are now in the database (March 15th 2023)</li>
                 <li><strong>Playground is now available!</strong> Playground for The Great Excavation event is now available on the All Events subpage (February 20th 2023)</li>
